bin_PROGRAMS = tglng
tglng_SOURCES = \
 tglng.cxx \
 interp.cxx \
 common.cxx \
 argument.cxx \
 command.cxx \
 tokeniser.cxx \
 cmd/fundamental.cxx \
 cmd/parens.cxx \
 cmd/registers.cxx \
 cmd/arithmetic.cxx \
 cmd/logical.cxx \
 cmd/strings.cxx \
 cmd/magic_case.cxx \
 cmd/ensemble.cxx \
 cmd/control.cxx
