AUTOMAKE_OPTIONS = subdir-objects
AM_CXXFLAGS=-Wall
bin_PROGRAMS = tglng
tglng_SOURCES = \
 tglng.cxx \
 startup.cxx \
 options.cxx \
 interp.cxx \
 common.cxx \
 argument.cxx \
 command.cxx \
 function.cxx \
 tokeniser.cxx \
 regex.cxx \
 cmd/fundamental.cxx \
 cmd/long_mode.cxx \
 cmd/parens.cxx \
 cmd/registers.cxx \
 cmd/arithmetic.cxx \
 cmd/logical.cxx \
 cmd/strings.cxx \
 cmd/magic_case.cxx \
 cmd/ensemble.cxx \
 cmd/control.cxx \
 cmd/default_tokeniser.cxx \
 cmd/defun.cxx \
 cmd/list.cxx \
 cmd/variable.cxx \
 cmd/fs.cxx \
 cmd/regex_ops.cxx \
 cmd/external.cxx
